[gd_scene load_steps=6 format=2]

[ext_resource path="res://Reward/RewardsPopup.gd" type="Script" id=1]
[ext_resource path="res://Fonts/RegularWhite.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Domino/TextBoxWhiteTheme.tres" type="Theme" id=3]
[ext_resource path="res://Battlers/Animations/fade_out.tres" type="Animation" id=4]
[ext_resource path="res://Battlers/Animations/fade_in.tres" type="Animation" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.909091 )

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
color = Color( 0.172549, 0.172549, 0.172549, 1 )

[node name="Title" type="Label" parent="Node2D"]
margin_top = 24.0
margin_right = 960.0
margin_bottom = 48.0
rect_min_size = Vector2( 960, 24 )
custom_fonts/font = ExtResource( 2 )
text = "Rewards"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D"]
margin_left = 40.0
margin_top = 86.0
margin_right = 920.0
margin_bottom = 486.0
rect_min_size = Vector2( 880, 400 )
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
root_node = NodePath("../..")
anims/fade_in = ExtResource( 5 )
anims/fade_out = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Node2D"]
margin_top = 480.0
margin_right = 960.0
margin_bottom = 520.0
alignment = 1

[node name="Button" type="Button" parent="Node2D/HBoxContainer2"]
margin_left = 296.0
margin_right = 416.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Finish"

[node name="InventoryButton" type="Button" parent="Node2D/HBoxContainer2"]
margin_left = 420.0
margin_right = 540.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Inventory"

[node name="DeckButton" type="Button" parent="Node2D/HBoxContainer2"]
margin_left = 544.0
margin_right = 664.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Deck"

[connection signal="pressed" from="Node2D/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Node2D/HBoxContainer2/InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="Node2D/HBoxContainer2/DeckButton" to="." method="_on_DeckButton_pressed"]
